platform/trow/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trow
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: &host registry.khuedoan.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: trow-svc
            port:
              name: http-tcp
  tls:
  - hosts:
    - *host
    secretName: trow-tls-certificate
